--- a/assets/scss/_work.scss
+++ b/assets/scss/_work.scss
@@ -112,8 +112,6 @@
   }
 	.cards.work-cards--secondary {		
 		.card .text {
-			.card__header--sm {
-			}
 			.card__header--lg {
 				margin-top: 0;
 				margin-bottom: 4px;
